# alynxdj

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  DESIGN.md  MANUAL.md  Makefile  PLAN.md  README.md  RELEASING.md  SAVEFORMAT.md  alynxdj.cfg  help.txt  requirements.txt  sample-patch-browser.html  song-file-viewer.html  task.txt
pico-midi-comlynx/: CMakeLists.txt  README.md  comlynx_tx.pio  main.c  pico_sdk_import.cmake  tusb_config.h  usb_descriptors.c
src/: cart.s  editor.c  editor_alloc.s  eeprom.s  engine.c  help.c  irq.s  lowcode.s  main.c  pool.c  save.c  sound.c  sync.c  tracker.h
tools/: alynxdj_pool.py  alynxdj_sample.py  makefont.py  makehelp.py  makelogo.py  maketables.py  test_dac_symmetry.py  test_editor_clone.py  test_hardware_fixes.py  test_help_screen.py  test_midi_takeover.py  test_sample_bank.py  test_save_roundtrip.py  test_song_file_viewer.mjs  test_tone_modulation.py
tools/emu/: duoshot  duoshot.c  handy-alynxdj.patch  harness.c
